:sparkles: adding translation of pages

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -110,6 +110,17 @@ a:hover {
     color: var(--text);
 }
 
+select {
+    background-color: var(--dark-gray);
+    color: var(--text);
+    border: none;
+    cursor: pointer;
+}
+
+section option {
+    cursor: pointer;
+}
+
 .terminal-title,
 .terminal .body,
 .terminal .body span,
